--- a/editor/Form1.resx
+++ b/editor/Form1.resx
@@ -127,18 +127,18 @@
   <data name="buttonCopyTileset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ5SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
-        xpgQi6HxoyiNsMUqG1HZysZE2WhRAvQD2lJaQElpeZKW0s4UaGceLXZmOsf7hsKm4ElO3mLu+829592m
-        NmdwotsdifYMRZh9eCEp3DO0kGwfDMUu9fsfNt+ePtP0P91wh2K6riclrjOZnFd1liloLKNqbMgrsy73
-        0tiFe1/O1csbZX8VXi/QRX/q0LOpKptc4YxXdeZLa8zzo8AuP5sbqJc3qmNwIVkiQCRNzgiIxqYSnKUk
-        zgpcY/yvzu68XUzVyxslAAoBlulynCxAPuri/ZyM0eltvPZuWX4wHi/ffRer3HoTXm9x+p5f7P109hig
-        EmCVLgsLSIi6GP2ZhQlA4jXI5LxqIFPUkFM1DHtldLujX5vvT5w/HuEIICxG8dBfd8sm/MxAcFMHZYPJ
-        lTJ41QRlA8/MDq48mfUcj5CQdJaUD08BEW2XKiYW0wYWMwbm/2iYShxgQyqDsgFlgy7XB9MCiFc4CaAc
-        mFjOGohvGaBs4NuowrtWwec4xxaNc9M1TgBXhGWUQgNghADqAfArZ1qOZ2sIbWrwsarVSU6toUcA2p8G
-        V0QHeYWWp6QxSaGFomUa+U4jWADgd66G1e0aYtRJOCPy0JDnJuwCcM0Z+HbdOR+1OQIbrY8Cq0fudIdo
-        BCAhAUn58Fwj2HIWCKdhfet2fTStpzxJnYMRfa+snwooVnQCUAenqevlEnJK8VRAXi3C/iKKenmjrvYH
-        d3e4AcoGuZIGygaUjeUCeW+/huaB6Wq9vFEtvXMzLX2BbVvfmGlzBLnNMU8WZ5C39fn3Wx2z+Y7HIeUf
-        Yb+h542Xa0kAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ6SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
+        xpgQi6HxoyiNsMUqMYKJW9mYKBstSoB+QFtKCygpLU/SUtqZAu3Mo8XOTOd431DYFDzJyVvMfb+597zb
+        1OYMTnS7I9GeoQizDy8khXuGFpLtg6HYpX7/w+bb02ea/qcb7lBM1/WkxHUmk/OqzjIFjWVUjQ15Zdbl
+        Xhq/cO/LuXp5o+yvwusFuuhPHXo2VWWTK5zxqs58aY15fhTY5WdzA/XyRnUMLiRLBIikyRkB0dhUgrOU
+        xFmBa4z/1dmdt4upenmjBEAhwDJdjpMFyEddfJiTMTq9jdfeLcsPPsbLd8dilVtvwustTt/zi72fzh4D
+        VAKs0mVhAQlRF6M/szABSLwGmZxXDWSKGnKqhmGvjG539Gvz/YnzxyMcAYTFKB76627ZhJ8ZCG7qoGww
+        uVIGr5qgbOCZ2cGVJ7Oe4xESks6S8uEpIKLtUsXEYtrAYsbA/B8NU4kDbEhlUDagbNDlem9aAPEKJwGU
+        AxPLWQPxLQOUDXwbVXjXKvgc59iicW66xgngirCMUmgAjBBAPQB+5UzL8WwNoU0NPla1OsmpNfQIQPvT
+        4IroIK/Q8pQ0Jim0ULRMI99pBAsA/M7VsLpdQ4w6CWdEHhry3IRdAK45A9+uO+ejNkdgo/VRYPXIne4Q
+        jQAkJCApH55rBFvOAuE0rG/drjHTesqT1DkY0ffK+qmAYkUnAHVwmrpeLiGnFE8F5NUi7C+iqJc36mp/
+        cHeHG6BskCtpoGxA2VgukPf2a2gemK7WyxvV0js309IX2Lb1vTNtjiC3OebJ4gzytj7/fqtjNt/xOKT8
+        Az+Tocuxp1HfAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="Image.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -220,37 +220,40 @@
   <data name="buttonCopyFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ6SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
-        xpgQi6HxoyiNsMUqRtHErWxMlI0WJUA/oC2lBZSUlifpUNqZAm3n0WJnpnO8byhsCp7k5C3mvt/ce95t
-        anMGx7vdkWjPUITZh+eTwj1D88n2wVDsQr//fvPNqVNN/9M1dyim63pS5jpTyDlVZ1JeY5KqsSGvwrrc
-        i+/P3flypl7eKPuL8FqeLvpTB55JVdnEMme8qjNfWmOeH3l28cnsQL28UR2D88kiASJpsiQgGptMcJaS
-        OctzjfG/Orv1eiFVL2+UAJQIsESX42QB8lEXH2YVjE5t4aV30/K9j/Hy7bFY5car8FqL0/f0fO+n00cA
-        lQArdFlYQELUxejPDEwAMq9BIedUA1JBQ1bVMOxV0O2Ofm2+O372aIRDgLAYxUN/3Smb8DMDwQ0dlA0m
-        lsvgVROUDTzT27j0aMZzNEJC1llSOTgFRLRdrJhYSBtYkAzM/dEwmdjHulwGZQPKBl2ut6YFEK9wHKC0
-        b2IpYyC+aYCygW+9Cu9qBZ/jHJs0znXXGAFcESaV8g2AEQKo+8CvrGk5nqkhtKHBx6pWJ1m1hh4BaH8c
-        XBYd5Eq0PEWNySVaKFqmke80ggUAfmdrWNmqIUadhCWRh4YcN2EXgCvOwLerzrmozRFYb30QWDl0pztE
-        IwAJGUgqB+cqwZYyQDgN61u3651pPeVx6hyM6Ltl/URAoaITgDo4SV3PF5EtFU4E5NQC7M+iqJc36nJ/
-        cGebG6BskC1qoGxA2VjOk3f3amgemKrWyxvV0js73dIX2LL1vTFtjiC3OebI4gzytj7/XqtjJtfxMFT6
-        BzcIocT3SC7wAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ5SURBVDhPfZLNTxNRFMVZqvG/ceMOQyh+JSSAFDfGRBMX
+        xpgQi6HxoyiNsMUKLtTErWxMlI0WJUA/oC2lBZSUlifpUNppgXbm0dbOTOd431DYFDzJyVvMfb+597zb
+        0uEMTva6I9G+kQizjy4mhftGFpOdw6HYpUH/w9bbM2da/qcb7lBM1/WkzHWWJ+dUnUkFjUmqxka8edbj
+        Xn5/4d6Xc43yZtlfhTcKdNGfOvRcqsamVjnjNZ350hrz/Ciwy8/mhxrlzeoaXkyWCBBJkyUB0dh0grOU
+        zFmBa4z/1dmd8aVUo7xZAqAQYIUux8kC5KMuPsznMTGzg9febcsPPsbLd9/FKrfehDfanL7nF/s/nT0G
+        qARYo8vCAhKiLiZ+ZmACkHkdeXJONSAVNWRVDaPePHrd0a+t9yfPH49wBBAWo3jor3tlE35mILilg7LB
+        1GoZvGaCsoFndhdXnsx5jkdIyDpL5g9PARFtlyomltIGliQDC380TCeq2JTLoGxA2aDHNW5aAPEKJwGU
+        qomVjIH4tgHKBr7NGrzrFXyOc2zTODddbwngijBJKTQBxgigVoFfWdNyPFNHaEuDj9WsTrJqHX0C0Pk0
+        uCo6yCm0PCWNyQotFC3T2HcawQIAv7N1rO3UEaNOwpLIQ0OOm7ALwDVn4Nt150LU5ghstj8KrB252x2i
+        EYCEDCTzh+c6wVYyQDgN61uva8K0nvIkdQ9H9P2yfiqgWNEJQB2cpp6Xy8gqxVMBObUI+4soGuXNujoY
+        3NvlBigbZEsaKBtQNpYL5P2DOlqHZmqN8ma19c/Ptg0EdmwDHtPmCHKbY4EsziDvGPAftDvmcl2PQ8o/
+        FNyhqDhGqugAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="buttonPasteFloor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVDhPfZLdT1JxGMdd/0VbEy666qKLbrpOhBBKRDZD
-        VtQ5QEiZ2Ry1tRa1KNmxUU55aabIhCxtbsnbWmtuXdRaM/IVFUIqQbgJ1AupLb+d8wMEX+rZPttvO8/3
-        8zznnF9VqRxU9RGnho/dPD53MFds2b+cF6qP2SneONfsMR7HVjaIjegdAnd2tx0lIgfF99rpakUxVi6n
-        5lBi9N61rZWJ21jur8efnwHkZo0E7hzvkyLhb8Oy79Iv53neRjFWLs6+MmFCfNyApT4JYo5axOwClhrE
-        bDWI2k5gfkDOPm8lmxRj5SKCt7fwdUyH2CiNpedqLA6f3UHE1YiFIfrfgh9vbiI6QmHRq0JkUEECu/mv
-        4Pvr62TSgkdJBHMDCrzoouC2aOHu1GLwgQauTgPutkhgMBgYvV7P6HQ6hqIoDRF8C3UgMnSmEO5vQPhJ
-        I172GpHP57G+vr6HtbU1JJPJ32q12kwEiUA7WXP+aQNmnfWYtMkw0t1BGkOhEILB4DaBQIDACVQqVUGw
-        7LuCOTY8w4aneqX41H0Kw9Z2IshkMoR0Or3N6uoqETQ1NRUE8VeXMeM4jekeKb48EuPjQwm8XVeJoHKq
-        3+/fhhMoFIqCIDZmwFSPhIQ/d4nwwXISQ5ZW5HK5HVMr4QQymawoGG1B2FoIT3YK8N5cC/f9FiKonFrC
-        5/MRgVQqZQU0713Ey10gHRafadlfSWPKRcNjNSKbze6ZnEqlCJygrq7OXOXQ8CQOmh/mNilh0xyGpUOJ
-        zc1NssV+cAKhUGguXqedZTKZDjQ3N99QKpUM+6EYuVzOsO/LsCsz7FRGLBYzIpGIEQgEF/8CSiNlPoHt
-        XacAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJzSURBVDhPfZLdT1JxGMdd/0VbEy+66qKLbrpOhHgpEdkI
+        WFHnACFlZnPU1lrURsmOjXLKSzNFJmRpc0ve1lpz66LWmpH5ggiJlYreBOoF1Jbfzvnx6ks922f7bef5
+        fp7nnPOrKZWLqj3i1tVhN4/OHcwWW/Yv94XaY06KN841+8zHsZ0JYytxh8CdvW1HichF1fmddK2iGKuU
+        W3doadhybXt54jZS/Y348zOE7IyZwJ0X+6RYCrYhFbj0y32et1WMVYqzL09YsDhuwkKfBElXA5JOPks9
+        ko56JBwnMDcgZ5+3kk2KsUoRwZtb+DpmQHKUxsIzLeLDZ3cQ8zRjfoj+t+DH65tIjFCI+zWIDSpIYDf/
+        FXx/dZ1MmvepiGB2QIHnXRS8Nj28nXoM3tfB02nC3RYJTCYTYzQaGYPBwFAUpSOCb5EOxIbOFML9TYg+
+        bsaLXjPy+Tw2Nzf3sLGxgZWVld9ardZKBEuhdrLm3JMmzLgbMemQYaS7gzRGIhGEw+EyoVCIwAk0Gk1B
+        kApcwSwbnmbDU71SfOw+hWF7OxGsr68T1tbWyqTTaSJQKpUFweLLy5h2ncaXHik+PxThwwMJ/F1XiaB6
+        ajAYLMMJFApFQZAcM2GqR0LCn7qEeG87iSFbK7LZ7I6p1XACmUxWFIy2IGovhCc7+XhnbYD3XgsRVE8t
+        EQgEiEAqlbICmvc25ucukAHxp3r2V9KY8tDw2c3IZDJ7Jq+urhI4gVgstta4dDyJi66LcpuUcOgOw9ah
+        Qi6XI1vsBycQCATW4nXaWRaL5YBarb6hUqkY9kMxcrmcYd+XYVdm2KmMSCRihEIhw+fzL/4FLd9lNqeo
+        xYUAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>452, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>78</value>
   </metadata>
